case3/metabase/03-metabase.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
  labels:
    run: metabase-service
spec:
  ports:
  - port: 3000
    name: metabase    
    targetPort: 3000
  selector:
    run: metabase
