case3/metabase/04-metabase.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: metabase-ingress
spec:
  rules:
  - host: cchiappone-metabase.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: metabase-service
            port:
              number: 3000
        path: /
        pathType: Prefix
